# Tadado

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DeskTodoSeq.spec  LICENSE  README.md  RELEASE.md  SECURITY.md  Tadado.spec  build.bat  generate_icons_simple.py  installer.iss  main.py  pyproject.toml  recovered_main_window_raw.txt  release.ps1  seed_test_data.py  任务进度.md  详设说明.md  项目进度.md
.github/workflows/: release.yml  test.yml
resources/: desktodoseq.data  desktodoseq.data.bak
resources/help/: manual.html
resources/screenshots/: README.md
resources/themes/: base.qss  dark.qss  light.qss
scripts/: create_package_db.py
src/: app.py  config.py  version.py
src/models/: migrations.py  partition.py  priority.py  repository.py  task.py  task_filter.py  task_status.py
src/services/: __init__.py  archiver.py  changelog_parser.py  md_formatter.py  md_parser.py  notifier.py  recurrence.py  scheduler.py  update_checker.py
src/ui/: icon_draw.py  main_window.py  splash_screen.py  system_tray.py
src/ui/calendar_heatmap/: __init__.py  activity_content_view.py  activity_report_panel.py  calendar_heatmap_widget.py  collapse_panel.py  heatmap_model.py  heatmap_stats_panel.py  heatmap_tooltip.py  period_selector.py  progress_overview_list.py  report_exporter.py  task_tree_panel.py  timeline_detail_panel.py
src/utils/: date_utils.py  design_tokens.py  icon_loader.py  signal_bus.py  widget_utils.py  win32_autostart.py  win32_theme.py
tests/: conftest.py  test_md_formatter.py  test_md_parser.py  test_repository.py  test_task.py
(+26 files in other folders)
