[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktodoseq"
version = "0.1.0"
description = "Standalone desktop task management tool with Markdown-native task definition"
authors = [{name = "Hanxy", email = "hxy84@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.5.0",
    "apscheduler>=3.10.0",
    "pynput>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.0",
    "pyinstaller>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
desktodoseq = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
